add base class for SectionImport to handle common tasks on each import, move Awards to import before Projects so they are available for association; refactor project quote import to for association with People object; support primary/secondary/tertiary market fields for setting market category; adjust import for several new fieldnames, more test importing on local sandbox

--- a/plugins/aei/src/templates/index.twig
+++ b/plugins/aei/src/templates/index.twig
@@ -30,7 +30,7 @@
     <form method="post" id="deltek-import-form" action="/admin/actions/aei/deltek-import/import-records">
         {{ csrfInput() }}
         <ul>
-            {% for section in ['Projects', 'People', 'Offices', 'Awards', 'Impact'] %}
+            {% for section in ['Awards', 'Projects', 'People', 'Offices', 'Impact'] %}
                 <li>
                     {% include "_includes/forms/checkbox" with {
                         name:      'sections-to-import[]',
