better handle single section being imported, handle errors when sending ajax request, simplify import form active state and log display; more error handling within import service, send email of error; fix associating person with quote

--- a/plugins/aei/src/templates/index.twig
+++ b/plugins/aei/src/templates/index.twig
@@ -43,7 +43,7 @@
         </ul>
         <div class="info-output hidden"><p><div id="graphic" class="spinner"></div> Importing... (be patient, can take a while)</p></div>
         <div class="progressbar hidden"><div class="progressbar-inner"></div></div>
-        <div class="log-output hidden">{% if import_response is defined %}{{ import_response.log }}{% endif %}</div>
+        <div class="log-output hidden"></div>
         <p class="submit"><input type="submit" class="btn submit" name="submit" value="Run Importer"></p>
     </form>
 {% endblock %}
