--- a/plugins/aei/src/templates/index.twig
+++ b/plugins/aei/src/templates/index.twig
@@ -41,7 +41,7 @@
                 </li>
             {% endfor %}
         </ul>
-        <div class="info-output hidden"><p><div id="graphic" class="spinner"></div> Importing... (be patient, can take a while)</p></div>
+        <div class="info-output"><p><div id="graphic" class="spinner"></div> Importing... (be patient, can take a while)</p></div>
         <div class="progressbar hidden"><div class="progressbar-inner"></div></div>
         <div class="log-output hidden"></div>
         <p class="submit"><input type="submit" class="btn submit" name="submit" value="Run Importer"></p>
