only show people marked featured on people index & category pages

--- a/templates/people/index.html
+++ b/templates/people/index.html
@@ -8,8 +8,9 @@
     section: 'people',
     relatedTo: category,
     orderBy: 'personLastName',
+    featured: 1,
     with: [
-    'personImage'
+      'personImage'
     ]
   }).limit(20) as paginationInfo, peopleEntries %}
 
@@ -22,6 +23,7 @@
   {% paginate craft.entries({
     section: 'people',
     orderBy: 'personLastName',
+    featured: 1,
     with: [
       'personImage'
     ]
