rename "description" field to "body" for clarity

--- a/templates/awards/index.html
+++ b/templates/awards/index.html
@@ -7,7 +7,7 @@
 <div class="row -halves">
   <div class="row-block pull-to-top-h1">
     <div class="module text-module">
-      <div class="font-h1 no-margin user-content">{{ entry.description }}</div>
+      <div class="font-h1 no-margin user-content">{{ entry.body }}</div>
     </div>
   </div>
 </div>
