--- a/templates/projects/_entry.html
+++ b/templates/projects/_entry.html
@@ -34,7 +34,7 @@
           {% if entry.projectTagline %}
             <p class="font-h1 page-headline">{{ entry.projectTagline }}</p>
           {% endif %}
-          <div class="user-content">{{ entry.description }}</div>
+          <div class="user-content">{{ entry.body }}</div>
         </div>
       </div>
       <div class="row-block">
