--- a/templates/approach/_service.html
+++ b/templates/approach/_service.html
@@ -16,7 +16,7 @@
     <div class="row -halves secondary-page-intro">
       <div class="row-block top-overlap-p">
         <div class="page-intro module text-module background-white text-black">
-          <div class="user-content">{{ category.description }}</div>
+          <div class="user-content">{{ category.body }}</div>
         </div>
       </div>
     </div>
