--- a/templates/impact/_entry.html
+++ b/templates/impact/_entry.html
@@ -29,7 +29,7 @@
     <div class="row -halves secondary-page-intro">
       <div class="row-block top-overlap-p">
         <div class="page-intro module text-module background-white text-black">
-          <div class="user-content">{{ entry.description }}</div>
+          <div class="user-content">{{ entry.body }}</div>
         </div>
       </div>
       <div class="row-block">
