--- a/templates/people/_entry.html
+++ b/templates/people/_entry.html
@@ -31,7 +31,7 @@
           {% if entry.personQuote %}
             <blockquote>"{{ entry.personQuote }}"</blockquote>
           {% endif %}
-          <div class="user-content">{{ entry.description }}</div>
+          <div class="user-content">{{ entry.body }}</div>
         </div>
       </div>
       <div class="row-block">
