switch to aei project in webfaction, realized it's comma-delimited and not comma-delineated (oops)

--- a/plugins/aei/src/templates/index.twig
+++ b/plugins/aei/src/templates/index.twig
@@ -42,7 +42,7 @@
                 </li>
             {% endfor %}
         </ul>
-        <p>Optionally pass in comma-delineated <code>project_num, employee_num, impact_key,</code> or <code>office_name</code> values to only import items that match those Deltek IDs:</p>
+        <p>Optionally pass in comma-delimited <code>project_num, employee_num, impact_key,</code> or <code>office_name</code> values to only import items that match those Deltek IDs:</p>
         <p><input type="text" name="deltek-ids" size="50"></p>
 
         <div class="info-output"><p><div id="graphic" class="spinner"></div> Importing... (be patient, can take a while)</p></div>
