--- a/templates/approach/index.html
+++ b/templates/approach/index.html
@@ -27,7 +27,7 @@
     <ul class="row -quarters photo-row-separators semantic-only-list  big-margin-bottom">
     {% for service in craft.categories.group('services').all() %}
       <li class="row-block">
-        {% include 'partials/_article-service' %}
+        {% include 'services/_article' %}
       </li>
     {% endfor %}
     </ul>
