--- a/web/assets/scss/components/_nav.scss
+++ b/web/assets/scss/components/_nav.scss
@@ -45,7 +45,11 @@
 
     @include media-lg {
       display: block;
-      margin-top: 12*$beat;
+      margin-top: 4px;
+
+      @include min-screen-height(750px) {
+        margin-top: 12*$beat;
+      }
     }
   }
 
@@ -53,16 +57,12 @@
     @include font-h2;
     @include font-smoothing;
 
-    display: flex;
-    flex-shrink: 1;
-    min-height: 32*4px;
-    margin: $padding 0 0;
-    flex-basis: 24*$beat;
-    flex-direction: column;
-    justify-content: center;
+    margin: 84px 0 0;
 
     @include media-lg {
-      flex-basis: 38*$beat;
+      @include min-screen-height(810px) {
+        margin-top: 122px;
+      }
     }
 
     .primary-links-item {
@@ -95,9 +95,7 @@
 
       a:hover {
         &::after {
-          animation-duration: 0.3s;
-          animation-timing-function: $ease;
-          animation-name: right-arrow-hover;
+          animation: right-arrow-hover $ease 0.3s;
         }
       }
     }
@@ -107,7 +105,13 @@
     @include font-filter;
     @include font-smoothing;
     @include semantic-only-list;
-    margin: $padding 0 0;
+    margin: 85px 0 0;
+
+    @include media-lg {
+      @include min-screen-height(810px) {
+        margin-top: 110px;
+      }
+    }
 
     .filters-item {
       display: inline;
@@ -145,36 +149,35 @@
     display: block;
     text-align: right;
     &:first-of-type {
-      margin-bottom: $beat;
+      margin-bottom: 1.5*$beat;
     }
 
-    @include min-screen(430px) {
-      display: inline-block;
+    &.home-link {
+      top: $padding+3.5*$beat;
+      left: $padding;
+      position: absolute;
+    }
 
-      &:first-of-type {
-        margin-right: 3ch;
+    @include min-screen(550px) {
+      margin-left: 3ch;
+      display: inline-block;
+      &.home-link {
+        position: static;
       }
     }
-
 
     &.current a, a:hover {
       text-decoration: underline;
     }
-
-    a {
-      text-decoration: none;
-    }
   }
 }
-
-
 
 .nav-close {
   top: 0;
   left: 0;
-  z-index: 99;
   width: 100%;
   height: 100%;
+  z-index: 99;
   position: fixed;
   cursor: pointer;
   transition: opacity 0.2s $ease;
@@ -251,7 +254,6 @@
     display: none;
   }
 }
-
 
 @include max-screen ($breakpoint-lg - 1px) {
    body.site-nav-closed, body:not(.loaded) {
