add settings for which default sections are imported from deltek every night, show link to Asset Indexes from Deltek import page

--- a/plugins/aei/src/templates/index.twig
+++ b/plugins/aei/src/templates/index.twig
@@ -20,7 +20,8 @@
 {% block actionButton %}
     <div class="buttons">
         <a href="{{ pluginCpUrl }}" class="btn submit">{{ "View Logs"|t('aei') }}</a>
-        <a href="{{ pluginCpUrl }}" class="btn submit">{{ "Settings"|t('aei') }}</a>
+        <a href="/admin/settings/plugins/aei" class="btn submit">{{ "Settings"|t('aei') }}</a>
+        <a href="/admin/utilities/asset-indexes" class="btn submit">{{ "Asset Indexes"|t('aei') }}</a>
     </div>
 {% endblock %}
 
