Add 'current' class ability for home link; Fix project color fallback on home page; Add sticky nav;  Set masonry background to black

--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -20,7 +20,7 @@
           <li class="secondary-links-item {{ active('/contact/', 'url', 'current') }}">
             <a href="/contact/">Contact</a>
           </li>
-          <li class="secondary-links-item {{ active('/contact/', 'url', 'current') }} home-link">
+          <li class="secondary-links-item {{ active('', 'url', 'current') }} home-link">
             <a href="/contact/">Home</a>
           </li>
         </ul>
