--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -12,6 +12,9 @@
       </ul>
     </div>
   </div>
+</header>
+
+<nav id="sticky-nav" class="row -halves">
   <div class="search-block row-block">
     <div class="search-open">
       Search <svg class="icon-search"><use xlink:href="#icon-search" /></svg>
@@ -25,4 +28,4 @@
       <a href="/contact/">Contact</a>
     </li>
   </ul>
-</header>
+</nav>
