--- a/templates/partials/_head.html
+++ b/templates/partials/_head.html
@@ -14,7 +14,7 @@
 
   <link rel="stylesheet" href="{{ rev('css/main.css') }}">
 
-  <link rel="shortcut icon" type="image/ico" href="{{ 'assets/images/favicon.png' }}">
+  <link rel="shortcut icon" type="image/ico" href="{{ '/assets/images/favicon.png' }}">
 
   <!--[if lt IE 9]>
     <script src="{{ 'assets/js/no-build/respond.min.js' }}"></script>
