--- a/web/assets/scss/components/_header.scss
+++ b/web/assets/scss/components/_header.scss
@@ -4,7 +4,7 @@
 
   .lockup-block {
     background: $white;
-    padding: $padding $padding 0;
+    padding: $padding $padding $padding;
   }
 
   @include media-md {
