--- a/web/assets/scss/pages/_pages.scss
+++ b/web/assets/scss/pages/_pages.scss
@@ -43,3 +43,11 @@
 .pagination {
   display: none;
 }
+
+.page-home, .page-expertise, .page-approach, .page-people {
+  .site-header {
+    .lockup-block {
+      padding-bottom: 0;
+    }
+  }
+}
