--- a/web/assets/scss/components/_header.scss
+++ b/web/assets/scss/components/_header.scss
@@ -68,7 +68,11 @@
 body.overlapping-header {
   @include media-md {
     .site-header {
-      display: none;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      z-index: 1;
     }
     #sticky-nav .secondary-links {
       background-color: rgba($black, 0.5);
