--- a/web/assets/scss/components/_user-content.scss
+++ b/web/assets/scss/components/_user-content.scss
@@ -1,13 +1,5 @@
 .text-module, .user-content {
 
-  p{
-    margin: 0;
-
-    &:not(:first-child) {
-      margin-top: 1.45em;
-    }
-  }
-
   > :first-child {
     margin-top: 0;
   }
@@ -18,6 +10,13 @@
 }
 
 .user-content {
+  p, h1, h2, h3, h4, h5, h6 {
+    margin-top: 1.45em;
+
+    &:first-child {
+      margin: 0;
+    }
+  }
   h2 { @include font-h1; }
-  h3, h4, h5, h6 { @include font-h2; }
+  h3, h4, h5, h6 { @include font-h2; margin-bottom: 0; }
 }
