Compile assets; Make stats full block height on module page

--- a/web/assets/scss/pages/_pages.scss
+++ b/web/assets/scss/pages/_pages.scss
@@ -4,6 +4,13 @@
       color: $off-white;
     }
   }
+  .row .row-block {
+    .module {
+      &.stat-two-figure-module {
+        min-height: 100%;
+      }
+    }
+  }
 }
 
 .page-expertise {
