--- a/web/assets/scss/components/_images.scss
+++ b/web/assets/scss/components/_images.scss
@@ -14,7 +14,7 @@
     background-position: center center;
 
     &.-top-weight {
-      background-position: top centers;
+      background-position: top center;
     }
   }
 
