Fix nav issues; add sticky headers; tighten mobile view

--- a/templates/people/_entry.html
+++ b/templates/people/_entry.html
@@ -29,7 +29,7 @@
       <div class="row-block top-overlap-{{ entry.personQuote ? 'h1' : 'p' }}">
         <div class="page-intro module text-module background-white text-black">
           {% if entry.personQuote %}
-            <blockquote>"{{ entry.personQuote }}"</blockquote>
+            <blockquote class="page-quote">"{{ entry.personQuote }}"</blockquote>
           {% endif %}
           <div class="user-content">{{ entry.body }}</div>
         </div>
