--- a/templates/search/index.html
+++ b/templates/search/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 
   <form action="{{ url('search') }}" class="search-form">
-      <input autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" type="search" value="{{ query ? query : '' }}" name="q" class="search-field form-control" placeholder="Search Terms" required="">
+      <input autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" type="search" value="{{ query ? query : '' }}" name="q" class="search-field form-control" placeholder="Search" required="">
       <button type="submit" class="button">
         <span class="border"></span><span class="extra-corners"></span>
         Search
@@ -61,7 +61,7 @@
 
           {% for title,entries in search_sections %}
             <section class="search-section">
-              <h2>{{ title }}</h2>
+              <div class="search-section-title"><h2>{{ title }}</h2></div>
               {% for entry in entries %}
                 {% include 'search/_article' %}
               {% endfor %}
