--- a/web/assets/scss/pages/_pages.scss
+++ b/web/assets/scss/pages/_pages.scss
@@ -51,7 +51,7 @@
   display: none;
 }
 
-.page-home, .page-expertise, .page-approach, .page-people {
+.page-home, .page-expertise, .page-approach, .page-people.white-header {
   .site-header {
     .lockup-block {
       padding-bottom: 0;
