--- a/web/assets/scss/components/_nav.scss
+++ b/web/assets/scss/components/_nav.scss
@@ -1,6 +1,7 @@
 // Main Site Navigation
 
 .site-nav {
+  @include hardware-acceleration;
   top: 0;
   left: 0;
   height: 100%;
@@ -173,6 +174,7 @@
 }
 
 .nav-close {
+  @include hardware-acceleration;
   top: 0;
   left: 0;
   width: 100%;
@@ -198,6 +200,7 @@
 }
 
 .nav-open {
+  @include hardware-acceleration;
   top: 0;
   left: 0;
   height: 100%;
@@ -221,6 +224,7 @@
 }
 
 .current-filter-label, .open-filters {
+  @include hardware-acceleration;
   top: 132px;
   z-index: 2;
   right: 100%;
