--- a/web/assets/scss/components/_page-headers.scss
+++ b/web/assets/scss/components/_page-headers.scss
@@ -2,10 +2,9 @@
   position: relative;
 
   @include media-md {
-    // max-height: 85vh;
-    min-height: calc((100vw - #{$padding})*.667); // Aspect ratio 3:2
     padding-top: 16*$beat;
     padding-bottom: 16*$beat;
+    min-height: calc((100vw - #{$padding})*.667); // Aspect ratio 3:2
   }
 
   @include media-lg {
@@ -13,14 +12,16 @@
   }
 
   .row {
+    @include hardware-acceleration;
     z-index: 1;
   }
 
   .hero-image {
+    @include hardware-acceleration;
     height: 0;
+    z-index: -1;
     position: relative;
     padding-bottom: $landscape-padding;
-    z-index: -1;
 
 
     @include media-md {
@@ -57,6 +58,7 @@
   }
 
   .row {
+    @include hardware-acceleration;
     z-index: 1;
   }
 
@@ -68,6 +70,7 @@
   }
 
   .theater-hero {
+    @include hardware-acceleration;
     height: 0;
     position: relative;
     padding-bottom: 100% * 9/16; // aspect ratio block on mobile
@@ -79,6 +82,7 @@
   }
 
   .theater-cover-top, .theater-cover-bottom {
+    @include hardware-acceleration;
     z-index: 1;
     transition: transform 0.2s 0.4s $ease;
   }
